--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/cache-manager": "^3.4.2",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
+    "@types/multer": "^1.4.7",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
